--- a/main.tex
+++ b/main.tex
@@ -101,7 +101,7 @@ Atualmente, o Figma possui 6 principais modos de uso: Design, onde é possível 
 \label{subsec:justificativa}
 A proposta do Figma como sistema é tranformar o fluxo de design para algo mais colaborativo. Em outros sistemas, o design e prototipação são desenvolvidos localmente e de forma individual, o que pode causar demora na comunicação e dificuldade no compartilhamento de arquivos atualizados. \\
 
-Como o Figma é uma plataforma online e colaborativa que possui ferramentas de design, prototipação e codificação em aoenas um sistema, é possível que toda a equipe tenha uma visão do trabalho em tempo real e feedbacks mais rápidos do que deve ser feito e modificado, o que diminui o risco de desententimentos internos e externos entre equipes e aumento na produtividade geral.
+Como o Figma é uma plataforma online e colaborativa que possui ferramentas de design, prototipação e codificação em um sistema, é possível que toda a equipe tenha uma visão do trabalho em tempo real e \textit{feedbacks} mais rápidos do que deve ser feito e modificado, o que diminui o risco de desentendimentos internos e externos entre equipes e aumento na produtividade geral.
 
 \vspace{1cm}
 
@@ -113,7 +113,7 @@ O público-alvo do Figma é composto principalmente por:
 \begin{itemize}
     \item Designers de interface (UI/UX), que criam interfaces e protótipos para sistemas;
     \item Times de desenvolvimento, que podem utilizar as ferramentas para validar ideias, acompanhar o desenvolvimento do sistema e colaborar entre si;
-    \item Profissionais de marketing e branding, que usam das vastas ferramentas para criar e publicar suas ideias;
+    \item Profissionais de \textit{marketing} e \textit{branding}, que usam das vastas ferramentas para criar e publicar suas ideias;
     \item Educadores e estudantes, que utilizam o Figma como ferramenta de apoio no aprendizado em design;
     \item Desenvolvedores, que se beneficiam de uma plataforma simplificada e versátil para a implementação visual dos sistemas;
 \end{itemize}
@@ -171,7 +171,7 @@ Para fazer uma nova conta no Figma, é preciso apertar o botão \textit{Get star
 
 \vspace{0.2cm}
 
-Após apertar no botão de cadastro, uma janela pop-up aparecerá para escolher entre o cadastro de e-mail e cadastro google (\autoref{fig:tela_signup})
+Após apertar no botão de cadastro, uma janela pop-up aparecerá para escolher entre o cadastro de e-mail e cadastro via Google. (\autoref{fig:tela_signup})
 
 \begin{figure}[H]
     \centering
@@ -203,7 +203,7 @@ Após isso, será solicitado que você escolha uma senha e, novamente, aperte no
 
 \vspace{0.2cm}
 
-Após isso, será enviado um e-mail para seu correio eletônico com as informações necessárias para continuar seu cadastro. É preciso que você confirme e siga os passos dados no e-mail.
+Após isso, será enviado um e-mail para seu correio eletrônico com as informações necessárias para continuar seu cadastro. É preciso que você confirme e siga os passos dados no e-mail.
 
 \begin{figure}[H]
     \centering
@@ -465,12 +465,15 @@ Neste layout, existem os seguintes blocos:
 \section{Principais Funcionalidades}
 \label{sec:funcionalidades}
 
-Após apresentar as principais telas do sistema, é preciso entender as suas principais funcionalidades. Por ser um sistema com diversas funcionalidades para suas várias ferramentas, será apresentado as principais funcionalidades da ferramenta mais desenvonvida e utilizada no Figma, o Figma Design (layout pode ser visto na \autoref{fig:tela_design})
+Após apresentar as principais telas do sistema, é preciso entender as suas principais funcionalidades. Por ser um sistema com diversas funcionalidades para suas várias ferramentas, será apresentado as principais funcionalidades da ferramenta mais desenvolvida e utilizada no Figma, o Figma Design (layout pode ser visto na \autoref{fig:tela_design})
 
 % ----------------------------------
 
 \subsection{Criar um novo arquivo de design}
 \label{subsec:criar_design}
+
+Para iniciar o fluxo de design e prototipação de interfaces, é preciso criar primeiramente o arquivo que conterá esses recursos. A criação de um novo arquivo é fundamental para o começo do projeto. \\
+\vspace{0.2cm}
 
 \textbf{Passo a passo}
 \begin{enumerate}
@@ -484,24 +487,30 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
 \subsection{Criar um novo frame}
 \label{subsec:criar_frame}
 
+Um \textit{frame} é um agrupamento de recursos que engloba tudo o que é visto em determinada interface, assim, para o funcionamento correto da prototipação, é necessário primeiramente criar um \textit{frame} que irá refletir o que será mostrado ao usuário em cada tela. \\
+\vspace{0.2cm}
+
 \textbf{Passo a passo}
 \begin{enumerate}
     \item Clique no ícone de \textit{Frame} (Segundo botão da esquerda para a direita da \autoref{fig:tela_design}, localizado no bloco 4);
     \item Escolha um tamanho predefinido no bloco 6 (por exemplo, iPhone 16);
-    \item Irá ser criado um frame que será utilizado para a prototipação, todos os objetos em um mesmo frame aparecerão em uma mesma tela (\autoref{fig:tela_design_blocos}).
+    \item Irá ser criado um \textit{frame} que será utilizado para a prototipação, todos os objetos em um mesmo \textit{frame} aparecerão em uma mesma tela (\autoref{fig:tela_design_blocos}).
 \end{enumerate}
 
 \begin{figure}[H]
     \centering
     \includegraphics{imagens/tela_design_frame.png}
-    \caption{Criação de um frame}
+    \caption{Criação de um \textit{frame}}
     \label{fig:tela_design_blocos}
 \end{figure}
 
 % ----------------------------------
 
-\subsection{Prototipar interações}
+\subsection{Prototipação de interações}
 \label{subsec:criar_interacoes}
+
+A prototipação é uma parte chave da validação do funcionamento do design da interface. Adicionando interações entre recursos, é possível verificar se o design é prático e eficaz para o sistema. \\
+\vspace{0.2cm}
 
 \textbf{Passo a passo}
 \begin{enumerate}
@@ -520,8 +529,11 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
 
 % ----------------------------------
 
-\subsection{Adicionar um objeto no frame}
+\subsection{Adicionar um objeto no \textit{frame}}
 \label{subsec:criar_objeto}
+
+A criação de objetos no \textit{frame} permite a adição de elementos gráficos no design, como formas geométricas e imagens.  \\
+\vspace{0.2cm}
 
 \textbf{Passo a passo}
 \begin{enumerate}
@@ -542,6 +554,9 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
 \subsection{Editar um objeto no arquivo}
 \label{subsec:editar_objeto}
 
+Depois de selecionar um objeto, o usuário pode modificar suas propriedades, como cor, tamanho, entre outros, garantindo precisão e flexibilidade dos objetos no sistema. \\
+\vspace{0.2cm}
+
 \textbf{Passo a passo}
 \begin{enumerate}
     \item Clique objeto desejado;
@@ -560,6 +575,9 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
 
 \subsection{Comentar em algum objeto}
 \label{subsec:criar_comentário}
+
+Essa função permite que membros da equipe adicionem comentários diretamente no design, facilitando a comunicação entre os envolvidos no projeto. \\
+\vspace{0.2cm}
 
 \textbf{Passo a passo}
 \begin{enumerate}
@@ -580,6 +598,9 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
 \subsection{Desenhar no arquivo}
 \label{subsec:criar_desenho}
 
+Permite que os usuários desenhem seus próprios vetores no design. Além de permitir que sejam criados elementos extremamente personalizáveis, também pode ser usado como uma segunda camada de comunicação entre a equipe. \\
+\vspace{0.2cm}
+
 \textbf{Passo a passo}
 \begin{enumerate}
     \item Clique no ícone de comentário (Sexto botão da esquerda para a direita da \autoref{fig:tela_design}, localizado no bloco 4);
@@ -599,6 +620,9 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
 \subsection{Compartilhar o link para visualização}
 \label{subsec:compartilhar_design}
 
+O usuário pode gerar um link público ou restrito ou enviar uma permissão de visualização por e-mail, encorajando a colaboração entre a equipe. \\
+\vspace{0.2cm}
+
 \textbf{Passo a passo}
 \begin{enumerate}
     \item Clique no ícone Compartilhar (Terceiro botão da esquerda para a direita da \autoref{fig:tela_design}, localizado no bloco 5);
@@ -616,6 +640,9 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
 
 \subsection{Mover o arquivo para uma equipe}
 \label{subsec:mover_design}
+
+Os arquivos podem ser transferidos entre espaços de trabalho ou equipes dentro do sistema, garantindo que membros da equipe correta tenham acesso aos conteúdos que precisam. \\
+\vspace{0.2cm}
 
 \textbf{Passo a passo}
 \begin{enumerate}
@@ -636,6 +663,9 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
 \subsection{Deletar o arquivo}
 \label{subsec:deletar_design}
 
+Permite remover permanentemente um arquivo do espaço de trabalho. Primeiramente envia o arquivo para a lixeira, onde pode ser excluído permanentemente. \\
+\vspace{0.2cm}
+
 \textbf{Passo a passo}
 \begin{enumerate}
     \item Na tela inicial (\autoref{fig:tela_principal}), selecione o arquivo que deseja apagar;
@@ -643,7 +673,7 @@ Após apresentar as principais telas do sistema, é preciso entender as suas pri
     \item O arquivo será movido para a lixeira da equipe que foi criada. Para acessá-la, aperte em "lixeira" (Quinto botão de cima para baixo do bloco 4, visto na \autoref{fig:tela_cores})
     \item Irá ser criado um objeto, que pode ter suas propriedades editadas posteriormente (\autoref{fig:tela_design_objeto})
     \item Ao localizar o arquivo na lixeira, clique com o botão direito do mouse e escolha a opção "excluir permanentemente";
-    \item O arquivo será exlcluído permanentemente e não pode ser recuperado.
+    \item O arquivo será excluído permanentemente e não pode ser recuperado.
 \end{enumerate}
 
 \begin{figure}[H]
